# cyber

./: .dockerignore  .gitignore  CLAUDE.md  CyberInstaller.iss  PROCESS.md  README.md  claude-add-notebook.sh  docker-compose.annotated.yml  docker-compose.yml  install.sh
.github/deactivated-workflows/: ci.yml
.github/workflows/: build-images.yml
admin/: .dockerignore  Dockerfile  NotebookAdmin.csproj  Program.cs  appsettings.Development.json  appsettings.json
admin/Components/: App.razor  _Imports.razor
admin/Data/: ApplicationDbContext.cs
admin/Migrations/: 20260207132847_InitialCreate.cs  ApplicationDbContextModelSnapshot.cs
admin/Models/: NotebookModels.cs
admin/Services/: AuthorService.cs  NotebookApiClient.cs  QuotaService.cs  TokenService.cs
admin/docs/: theming.md
backend/: Notebook.sln  README.md
backend/.run/: Full Stack.run.xml  Notebook.Server.run.xml  YourCyber.run.xml
backend/mcp/: thinktank_mcp.py  wild_mcp.py
backend/robots/: test_prompts.py
deploy/: .env  docker-compose.annotated.yml  docker-compose.yml
docs/: ARCHITECTURE.md  CRAWLER-EXTENSION-GUIDE.md  CRAWLER-IMPLEMENTATION.md  README.md  SETUP.md
docs/architecture/: 00-OVERVIEW.md  03-SERVER-ENHANCEMENTS.md  04-ROBOT-WORKERS.md  06-MIGRATION.md  10-PHASE-WILD.md  10-USER-FACING-FEATURES.md  12-SUBSCRIPTION-ARCHITECTURE.md
docs/manual/: PDF_GENERATION.md  README.md  index.md  mkdocs.yml
docs/roadmap/: INDEX.md
frontend/admin/: Dockerfile  NotebookAdmin.csproj  Program.cs  appsettings.json
infrastructure/: Dockerfile.backend  Dockerfile.legacy  docker-compose.annotated.yml  docker-compose.yml
legacy/notebook/: Cargo.toml  README.md
legacy/notebook/bootstrap/: OUTDATED.md  init_project.py
legacy/notebook/bootstrap/notebook-data/notebooks/4568b1d9-670f-41a0-8b4c-6543607a5d47/: catalog.json  coherence.json  meta.json
legacy/notebook/bootstrap/notebook-data/notebooks/4568b1d9-670f-41a0-8b4c-6543607a5d47/entries/: 013bba92-7e7e-452c-b224-b19240f6bbdd.json  01e37260-a407-48e4-8eb8-0de70a30e220.json  02c6ecfc-aeaf-4d10-b755-94e6b9d49fb2.json  0457d488-92e0-411c-82be-ab446f1b0a15.json  08df80cd-0781-4566-bf72-b350e3adeae2.json  0bf2c363-970d-421e-ad8c-f8f955cad2e8.json  1135e2a4-1fda-4604-9ce7-d627f73c0791.json  1153e8da-088f-474e-9418-984fc57ecfc3.json  11ec2401-2920-4cd6-9779-dfb9f34683a3.json  12119896-eae5-4c3e-b73a-69725f761b94.json  1291d791-daa3-40d0-825a-e023e4c87ac8.json  12e13cbb-e424-4d33-96a9-a20aa917fa72.json  145a1819-ecd8-4d6e-b424-bffe9f72c55c.json  1771e006-54ef-42fd-a0b0-492b356fbfb5.json  17b341b7-528e-4117-aa87-52c4546eb1f8.json  1cd4020b-7ea8-42bd-9116-64144d906b50.json  1e76bfde-c281-41fd-96f1-2ab3eb97b4f3.json  203e20bf-7bc0-4128-a9d3-bd85f4d99c8e.json  209d0bf5-2f6f-45db-84a5-2a48f2448c1f.json  216b4992-411a-4ffb-b506-30f0242a0d82.json  22ee4c3c-7fa4-4d61-8f37-6b62dbfb1204.json  2308c64e-056f-45b4-bfb4-577d2a80e5c5.json  26c9d8c8-5385-4b13-abb3-7400b24368b7.json  29992c32-c70b-43db-80c2-fd46e8c301e3.json  2b964a2c-0fc1-4eee-bf6c-4e071039bf6d.json  2db0dd56-70b5-4d67-8b56-f5f932e8c266.json  32ae7b85-10a9-45d3-b5c0-8686f99756e3.json  35a24fe4-a405-4ec8-bae6-baed18386a20.json  369efeef-3399-4eab-ad60-a365f59dabf9.json  381d238b-a526-4829-b57f-5097635af47b.json  3cc172a9-ed2b-41b3-9f14-984b7b98756b.json  3d6c2da5-e25f-4d73-84ff-ff0cd45ef9d2.json  3f00dd16-6915-4921-b947-7756eaa233a7.json  421ae951-9f47-4344-abe6-03838ede51ef.json  435fdcce-c693-45e7-88c0-413f1d558830.json  46ee8ade-fba4-4238-a0fd-27a1a838d8fa.json  477b17dd-6832-4fe5-9b7f-261ab6d05f2d.json  4841e17c-9c5c-4cbc-9005-c1b519322031.json  4ea55e73-38bc-4437-8434-9c890011079c.json  4ed4764a-4ad0-4679-89d6-46015bfbae72.json  (+77 more)
legacy/notebook/cli/: Cargo.toml
legacy/notebook/cli/src/commands/: browse.rs  create.rs  delete.rs  share.rs  write.rs
legacy/notebook/crates/notebook-core/src/: identity.rs
legacy/notebook/crates/notebook-entropy/: Cargo.toml
legacy/notebook/crates/notebook-entropy/benches/: graph_traversal.rs  write_throughput.rs
legacy/notebook/crates/notebook-entropy/src/: cache.rs  clustering.rs  coherence.rs  lib.rs  tfidf.rs
legacy/notebook/crates/notebook-entropy/tests/: entropy_validation.rs
legacy/notebook/crates/notebook-server/src/: config.rs  extract.rs  lib.rs
legacy/notebook/crates/notebook-server/src/middleware/: mod.rs  request_id.rs
legacy/notebook/crates/notebook-server/src/routes/: authors.rs  entries.rs  events.rs  health.rs  mod.rs  observe.rs
legacy/notebook/crates/notebook-store/: Cargo.toml  build.rs
legacy/notebook/crates/notebook-store/src/: error.rs  lib.rs  models.rs  queries.rs  repository.rs  store.rs
legacy/notebook/docs/: agent-integration.md  api-reference.md  integration-cost-summary.md  project-plan.md  quickstart.md
legacy/notebook/docs/plans/: 01-backend-auth-and-users.md
legacy/notebook/python/: README.md
legacy/notebook/python/notebook_client/: __init__.py  errors.py  types.py
mcp/: notebook_mcp.py  wild_mcp.py
notebook/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
notebook/bootstrap/: bootstrap_notebook.py
notebook/crates/notebook-core/: Cargo.toml
notebook/crates/notebook-core/src/: crypto.rs  lib.rs  types.rs
notebook/crates/notebook-server/: Cargo.toml
notebook/crates/notebook-server/src/: auth.rs  config.rs  error.rs  events.rs  extract.rs  lib.rs  main.rs  state.rs
notebook/crates/notebook-server/src/middleware/: request_id.rs
notebook/crates/notebook-server/src/routes/: auth.rs  browse.rs  entries.rs  events.rs  health.rs  mod.rs  notebooks.rs  observe.rs  share.rs
notebook/crates/notebook-server/tests/: two_agent_exchange.rs
notebook/crates/notebook-store/: Cargo.toml
notebook/crates/notebook-store/src/: causal.rs  graph.rs  lib.rs  models.rs  queries.rs  repository.rs  schema.rs  store.rs
notebook/docs/: agent-integration.md  (+4 more)
notebook/python/: pyproject.toml
notebook/python/notebook_client/: client.py
postgres/: init-thinktank.sh
scripts/: claude-add-notebook.sh  install.ps1  install.sh
thinktank/: .gitignore  Dockerfile  Notebook.sln
(+467 files in other folders)
