[package]
name = "notebook-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "HTTP API server for the Knowledge Exchange Platform"

[[bin]]
name = "notebook-server"
path = "src/main.rs"

[dependencies]
notebook-core = { workspace = true }
notebook-store = { workspace = true }
notebook-entropy = { workspace = true }

# HTTP server
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
http = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Types
uuid = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }

# Database (for direct SQL queries in routes)
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }

# Error handling
thiserror = { workspace = true }

# SSE support (added by agent-events for Task 4-3)
axum-extra = { workspace = true }
futures = { workspace = true }

# Tracing and logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
serde_urlencoded = "0.7"
reqwest = { workspace = true }
