[package]
name = "notebook-store"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Storage layer for the Knowledge Exchange Platform using PostgreSQL with Apache AGE"

[dependencies]
notebook-core = { workspace = true }

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json"
] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Types
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2"

# Tracing for observability
tracing = "0.1"

# Cryptographic hashing for AuthorId
blake3 = "1"

[dev-dependencies]
tokio-test = "0.4"

[features]
# Feature for running integration tests against real database
integration-tests = []
